site/assets/styles/main.scss
@use "@picocss/pico/scss/pico";

* {
	font-family: "SF Mono", ui-monospace, monospace;
}

body {
	min-height: 100vh;
	display: flex;
	flex-direction: column;
}

main {
	margin-bottom: auto;
}

footer {
	text-align: center;
}

nav {
	flex-direction: row;
}

.icon {
	fill: currentColor;
}

details .dropdown > ul {
	max-height: 512px;
	overflow-y: auto;
}

.visualization-grid {
	display: grid;
	grid-template-columns: 1fr 2fr;
}

.nomargin {
	margin: 0 !important;
}

.histogram-chart {
	display: block;
	width: 100%;
	height: auto;
	aspect-ratio: 3 / 1;
}

.chart {
	display: block;
	width: 100%;
	height: auto;
	aspect-ratio: 1 / 1;
}

main > *:last-child {
	margin-bottom: 0px;
}

header li.nav-header {
	padding-bottom: 0px;

	> p {
		margin-bottom: 0px;
	}
}

canvas.plot {
	display: block;
	width: 100%;
	height: auto;

	&-histogram,
	&-density {
		@extend .plot;
		aspect-ratio: 3 / 1;
	}

	&-scatter,
	&-joint-density {
		@extend .plot;
		aspect-ratio: 1 / 1;
	}
}

@media (max-width: 256px) {
	nav {
		flex-direction: column;
	}
}

@media (max-width: 1024px) {
	.visualization-grid {
		grid-template-columns: 1fr;
	}
}

article {
	padding-top: 0rem;
}

.sticky-settings {
	position: sticky;
	top: 0rem;
	z-index: 99;
	background-color: var(--pico-card-background-color);
	border-top-left-radius: 5px;
	border-top-right-radius: 5px;
	margin-left: calc(var(--pico-block-spacing-horizontal) * -1);
	margin-right: calc(var(--pico-block-spacing-horizontal) * -1);
	padding-left: 0rem;
	padding-right: 0rem;
	padding-top: 1rem;
}

.sticky-settings > .grid {
	padding-left: var(--pico-block-spacing-horizontal);
	padding-right: var(--pico-block-spacing-horizontal);
}

.sticky-settings > hr {
	margin-left: 0rem;
	margin-right: 0rem;
}

hr {
	margin-left: -1rem;
	margin-right: -1rem;
}

